--- a/sangiulianomil/localireal.html
+++ b/sangiulianomil/localireal.html
@@ -375,7 +375,7 @@ A:hover { text-decoration: underline }
 <hr noshade="" size="1" color="#808000">
 <p align="center"><a href="../index.html"><img src="ACZppplogo.JPG" border="0" width="61" height="95"></a><br>
   <font face="Verdana, Arial, Helvetica, sans-serif" size="1">sito di propriet&#xFFFD;
-  dell&apos;<a href="http://www.aczivido.net"><font color="#0000FF">Associazione Culturale
+  dell&apos;<a href="https://www.aczivido.net"><font color="#0000FF">Associazione Culturale
   Zivido</font></a><br>
   <a href="mailto:webmaster@aczivido.net"><font color="#0000FF">webmaster@aczivido.net</font></a></font></p>
 </body>
