--- a/sgmap.html
+++ b/sgmap.html
@@ -55,11 +55,11 @@
       </tr>
       <tr>
         <td align="left" valign="top"><span class="Stile7">Viboldone<br>
-          <a href="http://www.aczivido.net/viboldone"><img src="ppicon2.jpg" width="25" height="25" border="1"></a>&#xA0;&#xA0;<a href="http://www.aczivido.net/viboldone"><img src="ppicon7.jpg" width="25" height="25" border="1"></a></span></td>
+          <a href="/viboldone"><img src="ppicon2.jpg" width="25" height="25" border="1"></a>&#xA0;&#xA0;<a href="/viboldone"><img src="ppicon7.jpg" width="25" height="25" border="1"></a></span></td>
       </tr>
       <tr>
         <td align="left" valign="top"><span class="Stile7">Zivido<br>
-          <a href="zivido/chiesa/santamar.html"><img src="ppicon3.jpg" width="25" height="25" border="1"></a>&#xA0;&#xA0;<a href="zivido/castello/castello.html"><img src="ppicon1.jpg" width="25" height="25" border="1"></a>&#xA0;&#xA0;<a href="parco/index.html"><img src="ppicon4.jpg" width="25" height="25" border="1"></a>&#xA0;&#xA0;<a href="zivido/igiganti/gigcopertina.html"><img src="ppicon5.jpg" width="25" height="25" border="1"></a>&#xA0;&#xA0;<a href="zivido/archeologia/zivarcheo1.html"><img src="ppicon6.jpg" width="25" height="25" border="1"></a>&#xA0;&#xA0;<a href="http://www.aczivido.net/zivido"><img src="ppicon7.jpg" width="25" height="25" border="1"></a></span></td>
+          <a href="zivido/chiesa/santamar.html"><img src="ppicon3.jpg" width="25" height="25" border="1"></a>&#xA0;&#xA0;<a href="zivido/castello/castello.html"><img src="ppicon1.jpg" width="25" height="25" border="1"></a>&#xA0;&#xA0;<a href="parco/index.html"><img src="ppicon4.jpg" width="25" height="25" border="1"></a>&#xA0;&#xA0;<a href="zivido/igiganti/gigcopertina.html"><img src="ppicon5.jpg" width="25" height="25" border="1"></a>&#xA0;&#xA0;<a href="zivido/archeologia/zivarcheo1.html"><img src="ppicon6.jpg" width="25" height="25" border="1"></a>&#xA0;&#xA0;<a href="/zivido"><img src="ppicon7.jpg" width="25" height="25" border="1"></a></span></td>
       </tr>
       <tr>
         <td align="left" valign="top"><span class="Stile7">Carpianello<br>
