--- a/viboldone/pagina.html
+++ b/viboldone/pagina.html
@@ -29,7 +29,7 @@
       <p>&#xA0;</p>
       <p><a href="../index.html" target="_blank"><img src="../sangiulianomil/ACZppplogo.JPG" border="0"></a><br>
         <small><font face="Verdana, Arial, Helvetica, sans-serif" size="1">sito
-        di propriet&#xFFFD; dell&apos;<a href="http://www.aczivido.net" style="color: rgb(0,0,255)" target="_blank"><font color="#0000FF">Associazione
+        di propriet&#xFFFD; dell&apos;<a href="https://www.aczivido.net" style="color: rgb(0,0,255)" target="_blank"><font color="#0000FF">Associazione
         Culturale Zivido</font></a><br>
         <a href="mailto:webmaster@aczivido.net" style="color: rgb(0,0,255)"><font color="#0000FF">webmaster@aczivido.net</font></a></font></small></p>
       <p><font face="Verdana" color="#000000"><br>
