--- a/zivido/archivio.html
+++ b/zivido/archivio.html
@@ -363,7 +363,7 @@ A:hover { text-decoration: underline }
 <hr noshade="" size="1">
 <p align="center"><img src="ppplogoacz.jpg" width="61" height="95"><br>
   <font face="Verdana, Arial, Helvetica, sans-serif" size="1">sito di propriet&#xFFFD;
-  della <a href="http://www.aczivido.net"><font color="#0000FF">Associazione Culturale
+  della <a href="https://www.aczivido.net"><font color="#0000FF">Associazione Culturale
   Zivido</font></a><br>
   </font><a href="mailto:webmaster@aczivido.net"><font face="Verdana, Arial, Helvetica, sans-serif" color="#0000FF" size="1">webmaster@aczivido.net</font></a></p>
 </body>
