--- a/12nov2003.html
+++ b/12nov2003.html
@@ -1,4 +1,28 @@
-<html><head><title>12 novembre 2003 - Nassirya</title><script>!function(e,a,t,n,g,c,o){e.GoogleAnalyticsObject=g,e.ga=e.ga||function(){(e.ga.q=e.ga.q||[]).push(arguments)},e.ga.l=1*new Date,c=a.createElement(t),o=a.getElementsByTagName(t)[0],c.async=1,c.src="https://www.google-analytics.com/analytics.js",o.parentNode.insertBefore(c,o)}(window,document,"script",0,"ga"),ga("create","UA-656806-1","auto"),ga("send","pageview")</script></head><body bgcolor="#FFFFFF"><table width="80%" border="0" cellspacing="0" cellpadding="0" align="center"><tr><td align="center" valign="top"><img src="sfondofiamma.jpg" width="560" height="367"></td></tr><tr><td align="center" valign="top"> </td></tr><tr><td align="center" valign="top"><p><font face="Verdana, Arial, Helvetica, sans-serif" size="1">associazione culturale zivido</font></p></td></tr></table></body></html>e="1">associazione
+<html>
+<head>
+<title>12 novembre 2003 - Nassirya</title>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-656806-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+</head>
+<body bgcolor="#FFFFFF">
+<table width="80%" border="0" cellspacing="0" cellpadding="0" align="center">
+  <tr>
+    <td align="center" valign="top"><img src="sfondofiamma.jpg" width="560" height="367"></td>
+  </tr>
+  <tr>
+    <td align="center" valign="top">&#xA0;</td>
+  </tr>
+  <tr>
+    <td align="center" valign="top">
+      <p><font face="Verdana, Arial, Helvetica, sans-serif" size="1">associazione
         culturale zivido</font></p>
     </td>
   </tr>
