--- a/zivido/progettichiesa/leoni4.html
+++ b/zivido/progettichiesa/leoni4.html
@@ -61,7 +61,7 @@
 </table>
 <p class="piepagina"><a href="progchiesindex.html">indice progetti</a></p>
 <p class="piepagina"><img src="../ppplogoacz.jpg" width="61" height="95"><br>
-  sito di propriet&#xFFFD; della<a href="http://www.aczivido.net"> Associazione Culturale Zivido</a><br>
+  sito di propriet&#xFFFD; della<a href="https://www.aczivido.net"> Associazione Culturale Zivido</a><br>
   <a href="mailto:webmaster@aczivido.net">webmaster@aczivido.net</a>
 </p>
 </body>
