--- a/zivido/progettichiesa/leoni7.html
+++ b/zivido/progettichiesa/leoni7.html
@@ -80,7 +80,7 @@
 <p class="piepagina"><a href="progchiesindex.html">indice progetti</a><br>
   <br>
   <img src="../ppplogoacz.jpg" width="61" height="95"><br>
-  sito di propriet&#xFFFD; della <a href="http://www.aczivido.net">Associazione Culturale Zivido</a><br>
+  sito di propriet&#xFFFD; della <a href="https://www.aczivido.net">Associazione Culturale Zivido</a><br>
   <a href="mailto:webmaster@aczivido.net%20">webmaster@aczivido</a></p>
 </body>
 </html>
