--- a/zivido/progettichiesa/venezia1.html
+++ b/zivido/progettichiesa/venezia1.html
@@ -76,7 +76,7 @@
 <p class="piepagina"><a href="progchiesindex.html" style="color: rgb(0,0,255)">indice progetti</a><br>
   <br>
   <img src="../ppplogoacz.jpg" width="61" height="95"><br>
-  sito di propriet&#xFFFD; della <a href="http://www.aczivido.net">Associazione Culturale Zivido</a><br>
+  sito di propriet&#xFFFD; della <a href="https://www.aczivido.net">Associazione Culturale Zivido</a><br>
   <a href="mailto:webmaster@aczivido.net">webmaster@aczivido.net</a></p>
 </body>
 </html>
